--- a/blogspot.html
+++ b/blogspot.html
@@ -16,4 +16,7 @@
                 <p>Suscribete y dale like</p>
             </div>
         </div>
+        <div id="footer">
+            <p>Hecho con amor en Platzi <3</p>
+        </div>
 </body></html>
