--- a/blogspot.html
+++ b/blogspot.html
@@ -10,17 +10,14 @@
             <p>Hyperblog</p>
             <span id="tagline">Tu blog de cabecera</span>
         </div>
-<<<<<<< HEAD
         <div id="post">
-            <h1>Este es el título atractivo e interesante del post</h1>
-            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+            <h1>Este titulo es mejor que el anterior</h1>
+            <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
             <p>Suscribete y dale like</p>
         </div>
     </div>
-=======
         <div id="footer">
             <p>Hecho con amor en Platzi <3</p>
         </div>
->>>>>>> footer
 </body></html>
